[package]
name = "cube_api_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
